Index.html groundwork

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,18 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+	<title> Slice </title>
+</head>
+
 <body>
-<p>Welcome to Slice!</p>
+	<marquee behavior="scroll" direction="left">Yo what's up loic?</marquee>
 </body>
+
+<canvas id="ctx" width="500" height="500" style="border:1px solid #000000;"></canvas>
+
+<script>
+
+</script>
+
 </html>
