--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 var
 
 //constants
-MOVESPEED = 3,
+MOVESPEED = 150,
 START_X = 325,
 START_Y = 325,
 
@@ -42,27 +42,27 @@ player =
 	x: START_X,
 	y: START_Y,
 
-	update: function()
+	update: function(dt)
 	{
 		//left arrow
 		if(keyStates[37])
 		{
-			player.x -= MOVESPEED;
+			player.x -= MOVESPEED * dt;
 		}
 		//up arrow
 		if(keyStates[38])
 		{
-			player.y -= MOVESPEED;
+			player.y -= MOVESPEED * dt;
 		}
 		//right arrow
 		if(keyStates[39])
 		{
-			player.x += MOVESPEED;
+			player.x += MOVESPEED * dt;
 		}
 		//down arrow
 		if(keyStates[40])
 		{
-			player.y += MOVESPEED;
+			player.y += MOVESPEED * dt;
 		}
 	},
 
@@ -107,32 +107,63 @@ window.onload = function()
 	{
 		run();
 	}
-	image.src = "Images/figure.gif";
+	image.src = "Images/figure.gif";	//this line is done right after image = new Image()
 }
 
 function run()
 {
+	var lastTime;
 	var loop = function()
 	{
-		update();
+		var now = Date.now();
+		var dt = (now - lastTime) / 1000.0;
+
+		update(dt);
 		render();
+
+		lastTime = now
 		window.requestAnimationFrame(loop, canvas);
 	}
 	window.requestAnimationFrame(loop, canvas);
 }
 
-function update()
+function update(dt)
 {
+	player.update(dt);
 	frames++;
 }
 
 function render()
 {
 	ctx.fillRect(0,0,width,height);	//refresh background
-	player.update();
 	player.draw();
 }
 
 </script>
 </body>
 </html>
+
+// resize the canvas to fill browser window dynamically
+//    window.addEventListener('resize', resizeCanvas, false);
+
+ //   function resizeCanvas() {
+ //           canvas.width = window.innerWidth;
+ //           canvas.height = window.innerHeight;
+
+ //           /**
+ //            * Your drawings need to be inside this function otherwise they will be reset when 
+ //            * you resize the browser window and the canvas goes will be cleared.
+ //            */
+ //           drawStuff(); 
+ //   }
+ //resizeCanvas();
+
+//    function drawStuff() {
+            // do your drawing stuff here
+
+//CSS
+{ margin:0; padding:0; } /* to remove the top and left whitespace */
+
+html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
+
+canvas { display:block; } /* To remove the scrollbars */
