--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,12 @@
 		left: 0;
 		right: 0;
 	}
+	html, body
+	{   
+		width:100%;
+		height:100%;
+		overflow: hidden; 
+	}
 	</style>
 </head>
 <body>
@@ -93,8 +99,10 @@ window.onload = function()
 	document.addEventListener("keydown", analyzeKeyPress);
 	document.addEventListener("keyup", analyzeKeyPress);
 
-	width = 500;	//window.innerWidth;
-	height = 500;	//window.innerHeight;
+	width = 500;	
+	height = 500;	
+	//width = window.innerWidth;
+	//height = window.innerHeight;
 	canvas.width = width;
 	canvas.height = height;
 
@@ -142,28 +150,3 @@ function render()
 </script>
 </body>
 </html>
-
-// resize the canvas to fill browser window dynamically
-//    window.addEventListener('resize', resizeCanvas, false);
-
- //   function resizeCanvas() {
- //           canvas.width = window.innerWidth;
- //           canvas.height = window.innerHeight;
-
- //           /**
- //            * Your drawings need to be inside this function otherwise they will be reset when 
- //            * you resize the browser window and the canvas goes will be cleared.
- //            */
- //           drawStuff(); 
- //   }
- //resizeCanvas();
-
-//    function drawStuff() {
-            // do your drawing stuff here
-
-//CSS
-{ margin:0; padding:0; } /* to remove the top and left whitespace */
-
-html, body { width:100%; height:100%; } /* just to be sure these are full screen*/
-
-canvas { display:block; } /* To remove the scrollbars */
