--- a/public/Index.html
+++ b/public/Index.html
@@ -3,12 +3,14 @@
 
 <head>
 	<title>Slice</title>
-	<!script src="slice.js"><!/script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js" > </script>
+	<script src="scripts.js"></script>
 
 	<style>
 	canvas
 	{
-		display: block;
+		display: none;
 		position: absolute;
 		margin: auto;
 		border:1px solid #000000;
