--- a/public/Index.html
+++ b/public/Index.html
@@ -100,7 +100,7 @@ $(document).ready(function(){
 	$('div').click(function(){
 		console.log('madet');
 		$('canvas').toggleClass('showing');
-		socket = io.connect('http://localhost:4004');
+		socket = io.connect('http://6c713c42.ngrok.io');
 		
 		socket.on("connect", socketConnect);
 		socket.on("disconnect", socketDisconnect);
